 syntax = "proto3";

package gnode;

service GNodeService {
        rpc ExecuteFunction (AntMes) returns (AntRet);
        rpc CheckReceiver (HealthRequest) returns (AntRet);
        rpc GetClientStream (stream AntMes) returns (stream AntMes) {}
        rpc AskConnection (AskConnectionRequest) returns (PingRet) {}
        rpc Ping (AntMes) returns (PingRet) {}
        rpc Healthcheck(HealthRequest) returns (AntRet) {}
        rpc CheckEntry(CheckEntryRequest) returns (EmptyRet) {}
}

message BCEntry {
        bytes date = 1;
        repeated TreeLabel labels = 2;
        bytes payload = 3;
        string user_name = 4;
        bytes user_signature = 5; 
        bytes hash = 6;
}

message TreeBlock {
        string id = 1;
        string parent_id = 2;
        string child_id = 3;
        string sub_branch_label_name = 4;
        string label_name = 5;
        string label_value = 6;
        map<string, string> branch_map = 7;
        bytes hash = 8;
        bytes full_hash = 9;
        repeated BCEntry entries = 10;
        bool loaded = 11;
        bool updated = 12;
        int64 size = 13;
        int64 depth = 14;
}

message TreeLabel {
        string name = 1;
        string value = 2;
}

message CheckEntryRequest {
        string id = 1;
        string origin_node = 2;
        map<string, bytes> node_sign_map = 3;
        bytes entry = 4;
        bytes entry_hash = 5;
        bytes root_hash = 6;
        bool is_branch = 7;
        repeated TreeLabel labels = 8;
}

message AntMes {
        string id = 1;
        string origin = 2;
        string from_client = 3;
        string target = 4;
        bool isAnswer = 5;
        bool return_answer = 6;
        bool is_path_writer = 7;
        string origin_id = 8;
        repeated string path = 9;
        int32 path_index = 10;
        string function = 11;
        repeated string args = 12;
        bool debug = 13;
        bool answer_wait = 14;
        string errorMes = 15;
        repeated string nodes = 16;
        string user_name = 17;
        bool no_blocking = 18;
        bytes key = 19;
        bytes data = 20;
        TreeBlock block = 21;
}

message AntRet{
        bool ack = 1;
        string id = 2;
}

message HealthRequest {
        
}

message PingRet{
        string host = 1;
        string name = 2;
        int32 nb_node = 3;
        int32 nb_duplicate = 4;
        int32 client_number = 5;
}

message AskConnectionRequest{
        string name = 1;
        string host = 2;
        string ip = 3;
}

message EmptyRet{
        
}

message DataKey{
        int64 expo =1;
        bytes data =2;
}

